# Wahidur_Rahman_F23

./: .gitignore  CMakeLists.txt  Game_WA.sln  Uniqueness.txt
Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Game_WA/: CMakeLists.txt  Game_WA.vcxproj  main.cpp
Platinum/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  Keys.h  Picture.cpp  Picture.h  PictureImplementation.h  Platinum.vcxproj  Platinum.vcxproj.filters  PlatinumApp.cpp  PlatinumApp.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  Utilities.h  WindowImplementation.h  pch.h  placeholder.cpp
Platinum/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h  OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Platinum/include/: Platinum.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
